apps/awtrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awtrix
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
